--- a/APIconizer/Storyboards/Base.lproj/Main.storyboard
+++ b/APIconizer/Storyboards/Base.lproj/Main.storyboard
@@ -432,49 +432,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="437" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <stackView distribution="fill" orientation="horizontal" alignment="centerY" spacing="12" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ahi-9P-wu3">
-                                <rect key="frame" x="20" y="53" width="190" height="14"/>
+                            <stackView distribution="fill" orientation="horizontal" alignment="top" spacing="12" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tpk-JH-lce">
+                                <rect key="frame" x="20" y="53" width="357" height="14"/>
                                 <subviews>
-                                    <button translatesAutoresizingMaskIntoConstraints="NO" id="g0h-hU-kUM">
-                                        <rect key="frame" x="-2" y="-2" width="113" height="18"/>
-                                        <buttonCell key="cell" type="check" title="iTunes Artwork" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="UTc-eN-rh7">
-                                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                            <font key="font" metaFont="system"/>
-                                        </buttonCell>
-                                        <connections>
-                                            <binding destination="NAu-vy-ds1" name="value" keyPath="self.generateArtwork" id="eue-0i-CTa"/>
-                                        </connections>
-                                    </button>
                                     <button translatesAutoresizingMaskIntoConstraints="NO" id="Ae0-KA-sqS">
-                                        <rect key="frame" x="119" y="-2" width="73" height="18"/>
+                                        <rect key="frame" x="-2" y="-2" width="73" height="18"/>
                                         <buttonCell key="cell" type="check" title="Xcode 9" bezelStyle="regularSquare" imagePosition="left" inset="2" id="ODj-3g-aBJ">
                                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                             <font key="font" metaFont="system"/>
                                             <connections>
                                                 <binding destination="NAu-vy-ds1" name="value" keyPath="artworkIsXcode9" id="L1U-l1-bU8"/>
-                                                <binding destination="NAu-vy-ds1" name="enabled" keyPath="generateArtwork" id="Jer-M2-dk5"/>
                                             </connections>
                                         </buttonCell>
                                         <connections>
                                             <binding destination="NAu-vy-ds1" name="value" keyPath="self.artworkIsXcode9" id="kjJ-qC-XLG"/>
-                                            <binding destination="NAu-vy-ds1" name="enabled" keyPath="self.generateArtwork" id="Oms-aF-5v5"/>
                                         </connections>
                                     </button>
-                                </subviews>
-                                <visibilityPriorities>
-                                    <integer value="1000"/>
-                                    <integer value="1000"/>
-                                </visibilityPriorities>
-                                <customSpacing>
-                                    <real value="3.4028234663852886e+38"/>
-                                    <real value="3.4028234663852886e+38"/>
-                                </customSpacing>
-                            </stackView>
-                            <stackView distribution="fill" orientation="horizontal" alignment="top" spacing="12" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tpk-JH-lce">
-                                <rect key="frame" x="20" y="76" width="276" height="14"/>
-                                <subviews>
                                     <button translatesAutoresizingMaskIntoConstraints="NO" id="6Ny-ns-n8X">
-                                        <rect key="frame" x="-2" y="-2" width="100" height="18"/>
+                                        <rect key="frame" x="79" y="-2" width="100" height="18"/>
                                         <buttonCell key="cell" type="check" title="iPhone icons" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="ok9-Uf-ALZ">
                                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                             <font key="font" metaFont="system"/>
@@ -484,7 +459,7 @@
                                         </connections>
                                     </button>
                                     <button translatesAutoresizingMaskIntoConstraints="NO" id="caN-Bt-F5U">
-                                        <rect key="frame" x="106" y="-2" width="84" height="18"/>
+                                        <rect key="frame" x="187" y="-2" width="84" height="18"/>
                                         <buttonCell key="cell" type="check" title="iPad icons" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="U2K-Je-eZ1">
                                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                             <font key="font" metaFont="system"/>
@@ -497,7 +472,7 @@
                                         </connections>
                                     </button>
                                     <button translatesAutoresizingMaskIntoConstraints="NO" id="ynI-wa-n9g">
-                                        <rect key="frame" x="198" y="-2" width="80" height="18"/>
+                                        <rect key="frame" x="279" y="-2" width="80" height="18"/>
                                         <buttonCell key="cell" type="check" title="iOS 5 &amp; 6" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="3y8-3h-Z6Z">
                                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                             <font key="font" metaFont="system"/>
@@ -511,8 +486,10 @@
                                     <integer value="1000"/>
                                     <integer value="1000"/>
                                     <integer value="1000"/>
+                                    <integer value="1000"/>
                                 </visibilityPriorities>
                                 <customSpacing>
+                                    <real value="3.4028234663852886e+38"/>
                                     <real value="3.4028234663852886e+38"/>
                                     <real value="3.4028234663852886e+38"/>
                                     <real value="3.4028234663852886e+38"/>
@@ -530,12 +507,10 @@
                             </button>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="Ahi-9P-wu3" firstAttribute="leading" secondItem="DTl-XU-ux9" secondAttribute="leading" constant="20" id="4vy-6U-liw"/>
-                            <constraint firstItem="g0h-hU-kUM" firstAttribute="top" secondItem="Tpk-JH-lce" secondAttribute="bottom" constant="9" id="BJC-vr-CYL"/>
+                            <constraint firstItem="3z7-mm-54q" firstAttribute="top" secondItem="Tpk-JH-lce" secondAttribute="bottom" constant="12" id="1pS-tM-zYt"/>
                             <constraint firstAttribute="bottom" secondItem="3z7-mm-54q" secondAttribute="bottom" constant="20" id="DzB-V6-NAz"/>
-                            <constraint firstItem="3z7-mm-54q" firstAttribute="top" secondItem="Ahi-9P-wu3" secondAttribute="bottom" constant="12" id="Lqj-5L-jjh"/>
                             <constraint firstItem="3z7-mm-54q" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DTl-XU-ux9" secondAttribute="leading" constant="20" symbolic="YES" id="Zml-Ji-5gg"/>
-                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Tpk-JH-lce" secondAttribute="trailing" constant="20" id="knt-FF-QC7"/>
+                            <constraint firstItem="3z7-mm-54q" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Tpk-JH-lce" secondAttribute="trailing" id="lm8-rc-dat"/>
                             <constraint firstItem="Tpk-JH-lce" firstAttribute="leading" secondItem="DTl-XU-ux9" secondAttribute="leading" constant="20" id="sPQ-W7-tbp"/>
                             <constraint firstAttribute="trailing" secondItem="3z7-mm-54q" secondAttribute="trailing" constant="25" id="woc-Jp-nJO"/>
                         </constraints>
@@ -629,11 +604,37 @@
                                     <action selector="saveAppIconSet:" target="3Xo-0t-eZb" id="dMA-Lf-4Xa"/>
                                 </connections>
                             </button>
+                            <stackView distribution="fill" orientation="horizontal" alignment="centerY" spacing="12" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pdc-wJ-CAi">
+                                <rect key="frame" x="20" y="53" width="69" height="14"/>
+                                <subviews>
+                                    <button translatesAutoresizingMaskIntoConstraints="NO" id="lbT-Ie-J7H">
+                                        <rect key="frame" x="-2" y="-2" width="73" height="18"/>
+                                        <buttonCell key="cell" type="check" title="Xcode 9" bezelStyle="regularSquare" imagePosition="left" inset="2" id="H35-WI-wOB">
+                                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                            <connections>
+                                                <binding destination="NAu-vy-ds1" name="value" keyPath="artworkIsXcode9" id="nko-pF-t3Y"/>
+                                            </connections>
+                                        </buttonCell>
+                                        <connections>
+                                            <binding destination="3Xo-0t-eZb" name="value" keyPath="self.artworkIsXcode9" id="Nkg-0S-koi"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <visibilityPriorities>
+                                    <integer value="1000"/>
+                                </visibilityPriorities>
+                                <customSpacing>
+                                    <real value="3.4028234663852886e+38"/>
+                                </customSpacing>
+                            </stackView>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="ZyF-2p-7qZ" firstAttribute="top" secondItem="Pdc-wJ-CAi" secondAttribute="bottom" constant="12" id="7fV-4W-7Fn"/>
                             <constraint firstAttribute="trailing" secondItem="ZyF-2p-7qZ" secondAttribute="trailing" constant="25" id="9Ph-cj-Qdy"/>
                             <constraint firstItem="ZyF-2p-7qZ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DZh-kT-sZC" secondAttribute="leading" constant="20" symbolic="YES" id="Y5N-JA-72f"/>
                             <constraint firstAttribute="bottom" secondItem="ZyF-2p-7qZ" secondAttribute="bottom" constant="20" id="bzS-ln-c6h"/>
+                            <constraint firstItem="Pdc-wJ-CAi" firstAttribute="leading" secondItem="DZh-kT-sZC" secondAttribute="leading" constant="20" id="qCy-Ss-v3y"/>
                         </constraints>
                     </view>
                     <connections>
