--- a/APIconizer/Storyboards/Base.lproj/Main.storyboard
+++ b/APIconizer/Storyboards/Base.lproj/Main.storyboard
@@ -505,24 +505,55 @@
                                     <action selector="saveAppIconSet:" target="NAu-vy-ds1" id="1fy-aK-KNy"/>
                                 </connections>
                             </button>
+                            <scrollView wantsLayer="YES" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ml7-LB-Jtx">
+                                <rect key="frame" x="0.0" y="75" width="437" height="225"/>
+                                <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="loA-fN-wcS">
+                                    <rect key="frame" x="1" y="1" width="435" height="223"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <collectionView id="Bau-og-mvs">
+                                            <rect key="frame" x="0.0" y="0.0" width="435" height="158"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
+                                            <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" minimumLineSpacing="10" id="Prw-rj-Eyt">
+                                                <size key="itemSize" width="150" height="100"/>
+                                            </collectionViewFlowLayout>
+                                            <color key="primaryBackgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        </collectionView>
+                                    </subviews>
+                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
+                                </clipView>
+                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="XcN-Zw-AqY">
+                                    <rect key="frame" x="1" y="144" width="233" height="15"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="mVW-KL-zru">
+                                    <rect key="frame" x="234" y="1" width="15" height="143"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                            </scrollView>
                         </subviews>
                         <constraints>
                             <constraint firstItem="3z7-mm-54q" firstAttribute="top" secondItem="Tpk-JH-lce" secondAttribute="bottom" constant="12" id="1pS-tM-zYt"/>
+                            <constraint firstItem="Tpk-JH-lce" firstAttribute="top" secondItem="ml7-LB-Jtx" secondAttribute="bottom" constant="8" id="2eC-II-uE8"/>
+                            <constraint firstItem="ml7-LB-Jtx" firstAttribute="leading" secondItem="DTl-XU-ux9" secondAttribute="leading" id="AbA-yT-ZO8"/>
                             <constraint firstAttribute="bottom" secondItem="3z7-mm-54q" secondAttribute="bottom" constant="20" id="DzB-V6-NAz"/>
+                            <constraint firstAttribute="trailing" secondItem="ml7-LB-Jtx" secondAttribute="trailing" id="OUG-uQ-422"/>
                             <constraint firstItem="3z7-mm-54q" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DTl-XU-ux9" secondAttribute="leading" constant="20" symbolic="YES" id="Zml-Ji-5gg"/>
                             <constraint firstItem="3z7-mm-54q" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Tpk-JH-lce" secondAttribute="trailing" id="lm8-rc-dat"/>
                             <constraint firstItem="Tpk-JH-lce" firstAttribute="leading" secondItem="DTl-XU-ux9" secondAttribute="leading" constant="20" id="sPQ-W7-tbp"/>
+                            <constraint firstItem="ml7-LB-Jtx" firstAttribute="top" secondItem="DTl-XU-ux9" secondAttribute="top" id="tf9-5l-74Z"/>
                             <constraint firstAttribute="trailing" secondItem="3z7-mm-54q" secondAttribute="trailing" constant="20" id="woc-Jp-nJO"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="collectionView" destination="Bau-og-mvs" id="JRa-nG-D98"/>
                         <outlet property="saveButton" destination="3z7-mm-54q" id="rXx-Fg-HWr"/>
                     </connections>
                 </viewController>
                 <customObject id="NDE-j3-cK6" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
                 <userDefaultsController representsSharedInstance="YES" id="ir8-qb-wxF"/>
             </objects>
-            <point key="canvasLocation" x="1265" y="-110"/>
+            <point key="canvasLocation" x="1264.5" y="-110"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="yc1-WZ-eqm">
@@ -571,14 +602,45 @@
                                     <action selector="saveAppIconSet:" target="bHV-TW-PDg" id="0hZ-T2-N5u"/>
                                 </connections>
                             </button>
+                            <scrollView wantsLayer="YES" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LKK-RU-kFf">
+                                <rect key="frame" x="0.0" y="61" width="450" height="239"/>
+                                <clipView key="contentView" drawsBackground="NO" id="QdH-Jv-lRD">
+                                    <rect key="frame" x="1" y="1" width="448" height="237"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <collectionView id="D3W-hA-bB6">
+                                            <rect key="frame" x="0.0" y="0.0" width="448" height="158"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
+                                            <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" minimumLineSpacing="10" id="zMy-kJ-QzB">
+                                                <size key="itemSize" width="50" height="50"/>
+                                            </collectionViewFlowLayout>
+                                            <color key="primaryBackgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        </collectionView>
+                                    </subviews>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </clipView>
+                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="RkB-Hh-jmD">
+                                    <rect key="frame" x="1" y="144" width="233" height="15"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="O0D-dN-PMk">
+                                    <rect key="frame" x="234" y="1" width="15" height="143"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                            </scrollView>
                         </subviews>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="LKK-RU-kFf" secondAttribute="trailing" id="4AQ-NL-Tlz"/>
+                            <constraint firstItem="2ix-jp-h0y" firstAttribute="top" secondItem="LKK-RU-kFf" secondAttribute="bottom" constant="20" id="BA7-eq-LiM"/>
+                            <constraint firstItem="LKK-RU-kFf" firstAttribute="leading" secondItem="gYt-7P-jrg" secondAttribute="leading" id="BR1-Ey-5XN"/>
+                            <constraint firstItem="LKK-RU-kFf" firstAttribute="top" secondItem="gYt-7P-jrg" secondAttribute="top" id="EBA-zh-htH"/>
                             <constraint firstAttribute="bottom" secondItem="2ix-jp-h0y" secondAttribute="bottom" constant="20" id="KAs-oj-2ot"/>
                             <constraint firstItem="2ix-jp-h0y" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="gYt-7P-jrg" secondAttribute="leading" constant="20" symbolic="YES" id="PWd-Ef-2MD"/>
                             <constraint firstAttribute="trailing" secondItem="2ix-jp-h0y" secondAttribute="trailing" constant="20" id="ijG-4p-eHs"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="collectionView" destination="D3W-hA-bB6" id="E0j-fa-ij1"/>
                         <outlet property="saveButton" destination="2ix-jp-h0y" id="tTB-sE-tPK"/>
                     </connections>
                 </viewController>
@@ -628,17 +690,48 @@
                                     <real value="3.4028234663852886e+38"/>
                                 </customSpacing>
                             </stackView>
+                            <scrollView wantsLayer="YES" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5CJ-q3-zMV">
+                                <rect key="frame" x="0.0" y="75" width="450" height="225"/>
+                                <clipView key="contentView" drawsBackground="NO" id="Nha-as-YRH">
+                                    <rect key="frame" x="1" y="1" width="448" height="223"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <collectionView id="hLt-Q8-6AR">
+                                            <rect key="frame" x="0.0" y="0.0" width="448" height="158"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
+                                            <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" minimumLineSpacing="10" id="TCY-qC-Lrf">
+                                                <size key="itemSize" width="50" height="50"/>
+                                            </collectionViewFlowLayout>
+                                            <color key="primaryBackgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        </collectionView>
+                                    </subviews>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </clipView>
+                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="3uI-SI-TlY">
+                                    <rect key="frame" x="1" y="144" width="233" height="15"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="4ph-Lp-8Ig">
+                                    <rect key="frame" x="234" y="1" width="15" height="143"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                            </scrollView>
                         </subviews>
                         <constraints>
                             <constraint firstItem="ZyF-2p-7qZ" firstAttribute="top" secondItem="Pdc-wJ-CAi" secondAttribute="bottom" constant="12" id="7fV-4W-7Fn"/>
                             <constraint firstAttribute="trailing" secondItem="ZyF-2p-7qZ" secondAttribute="trailing" constant="20" id="9Ph-cj-Qdy"/>
+                            <constraint firstItem="5CJ-q3-zMV" firstAttribute="leading" secondItem="DZh-kT-sZC" secondAttribute="leading" id="Ekx-GF-bAe"/>
                             <constraint firstItem="ZyF-2p-7qZ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DZh-kT-sZC" secondAttribute="leading" constant="20" symbolic="YES" id="Y5N-JA-72f"/>
+                            <constraint firstAttribute="trailing" secondItem="5CJ-q3-zMV" secondAttribute="trailing" id="amG-2T-1wz"/>
                             <constraint firstAttribute="bottom" secondItem="ZyF-2p-7qZ" secondAttribute="bottom" constant="20" id="bzS-ln-c6h"/>
                             <constraint firstItem="Pdc-wJ-CAi" firstAttribute="leading" secondItem="DZh-kT-sZC" secondAttribute="leading" constant="20" id="qCy-Ss-v3y"/>
+                            <constraint firstItem="Pdc-wJ-CAi" firstAttribute="top" secondItem="5CJ-q3-zMV" secondAttribute="bottom" constant="8" id="wa9-qu-2FT"/>
+                            <constraint firstItem="5CJ-q3-zMV" firstAttribute="top" secondItem="DZh-kT-sZC" secondAttribute="top" id="ykx-f1-Sgk"/>
                             <constraint firstItem="ZyF-2p-7qZ" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="lbT-Ie-J7H" secondAttribute="trailing" id="zIe-yL-4xd"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="collectionView" destination="hLt-Q8-6AR" id="qdi-bi-Ns9"/>
                         <outlet property="saveButton" destination="ZyF-2p-7qZ" id="s10-wP-8h7"/>
                     </connections>
                 </viewController>
