--- a/APIconizer/Classes/Views/GeneratedImageCollectionViewItem.xib
+++ b/APIconizer/Classes/Views/GeneratedImageCollectionViewItem.xib
@@ -4,36 +4,97 @@
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13168.3"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
+        <capability name="stacking Non-gravity area distributions on NSStackView" minToolsVersion="7.0" minSystemVersion="10.11"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GeneratedImageCollectionViewItem" customModule="APIconizer" customModuleProvider="target">
             <connections>
+                <outlet property="nonRetinaImageView" destination="BZc-2L-WWw" id="GyU-Pt-Acq"/>
+                <outlet property="retinaHDImageView" destination="L3D-wN-CQY" id="DUt-6n-4sS"/>
+                <outlet property="retinaImageView" destination="osa-Da-o7A" id="FuY-hb-TaA"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="386" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="397" height="132"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0sZ-tq-GuG">
-                    <rect key="frame" x="6" y="75" width="37" height="17"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="8ag-cD-N0K">
-                        <font key="font" metaFont="system"/>
-                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                </textField>
+                <customView translatesAutoresizingMaskIntoConstraints="NO" id="oQt-Kc-NOA">
+                    <rect key="frame" x="0.0" y="0.0" width="397" height="132"/>
+                    <subviews>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ckC-S0-pnA">
+                            <rect key="frame" x="342" y="95" width="37" height="17"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="LEJ-dB-dpq">
+                                <font key="font" metaFont="system"/>
+                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                            </textFieldCell>
+                        </textField>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0sZ-tq-GuG">
+                            <rect key="frame" x="18" y="95" width="37" height="17"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="8ag-cD-N0K">
+                                <font key="font" metaFont="system"/>
+                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                            </textFieldCell>
+                        </textField>
+                        <stackView distribution="fillEqually" orientation="horizontal" alignment="bottom" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SCT-e3-hXR">
+                            <rect key="frame" x="20" y="12" width="357" height="75"/>
+                            <subviews>
+                                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BZc-2L-WWw">
+                                    <rect key="frame" x="0.0" y="0.0" width="216" height="50"/>
+                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageAlignment="left" imageScaling="proportionallyDown" id="ZZn-kO-nMk"/>
+                                </imageView>
+                                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="osa-Da-o7A">
+                                    <rect key="frame" x="224" y="0.0" width="50" height="50"/>
+                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="QlY-6R-7OQ"/>
+                                </imageView>
+                                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L3D-wN-CQY">
+                                    <rect key="frame" x="282" y="0.0" width="75" height="75"/>
+                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageAlignment="right" imageScaling="proportionallyDown" id="rk4-kc-vBH"/>
+                                </imageView>
+                            </subviews>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="75" id="fR3-xH-z5m"/>
+                            </constraints>
+                            <visibilityPriorities>
+                                <integer value="1000"/>
+                                <integer value="1000"/>
+                                <integer value="1000"/>
+                            </visibilityPriorities>
+                            <customSpacing>
+                                <real value="3.4028234663852886e+38"/>
+                                <real value="3.4028234663852886e+38"/>
+                                <real value="3.4028234663852886e+38"/>
+                            </customSpacing>
+                        </stackView>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="SCT-e3-hXR" firstAttribute="top" secondItem="0sZ-tq-GuG" secondAttribute="bottom" constant="8" id="FMn-GO-tIA"/>
+                        <constraint firstItem="0sZ-tq-GuG" firstAttribute="top" secondItem="oQt-Kc-NOA" secondAttribute="top" constant="20" id="Kks-5f-h7N"/>
+                        <constraint firstAttribute="bottom" secondItem="SCT-e3-hXR" secondAttribute="bottom" constant="12" id="Mqg-sH-o0o"/>
+                        <constraint firstItem="ckC-S0-pnA" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="0sZ-tq-GuG" secondAttribute="trailing" constant="24" id="N7H-N7-CKo"/>
+                        <constraint firstItem="ckC-S0-pnA" firstAttribute="top" secondItem="0sZ-tq-GuG" secondAttribute="top" id="NBj-Fm-ajd"/>
+                        <constraint firstItem="SCT-e3-hXR" firstAttribute="trailing" secondItem="ckC-S0-pnA" secondAttribute="trailing" id="Onq-1u-S29"/>
+                        <constraint firstItem="SCT-e3-hXR" firstAttribute="leading" secondItem="0sZ-tq-GuG" secondAttribute="leading" id="PAs-ut-bVw"/>
+                        <constraint firstItem="0sZ-tq-GuG" firstAttribute="leading" secondItem="oQt-Kc-NOA" secondAttribute="leading" constant="20" id="Tfg-vn-xtU"/>
+                        <constraint firstAttribute="trailing" secondItem="ckC-S0-pnA" secondAttribute="trailing" constant="20" id="mUi-rp-RHS"/>
+                    </constraints>
+                </customView>
             </subviews>
             <constraints>
-                <constraint firstItem="0sZ-tq-GuG" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="8" id="INE-HE-O6N"/>
-                <constraint firstItem="0sZ-tq-GuG" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="8" id="Sar-Bh-OLp"/>
+                <constraint firstAttribute="bottom" secondItem="oQt-Kc-NOA" secondAttribute="bottom" id="1cf-9u-hNi"/>
+                <constraint firstAttribute="trailing" secondItem="oQt-Kc-NOA" secondAttribute="trailing" id="7OX-q8-Z6k"/>
+                <constraint firstItem="oQt-Kc-NOA" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="MAD-Zg-2IX"/>
+                <constraint firstItem="oQt-Kc-NOA" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="VI3-58-JuM"/>
             </constraints>
-            <point key="canvasLocation" x="-24" y="104"/>
+            <point key="canvasLocation" x="-110.5" y="3"/>
         </customView>
         <customObject id="5rV-d6-YTg" customClass="GeneratedImageCollectionViewItem" customModule="APIconizer" customModuleProvider="target">
             <connections>
+                <outlet property="pointSizeLabel" destination="ckC-S0-pnA" id="CKf-ao-cpt"/>
                 <outlet property="titleLabel" destination="0sZ-tq-GuG" id="ZWc-Cv-7OX"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="2zQ-me-1Cq"/>
             </connections>
